unpackaged/main/default/objects/OpportunityLineItem/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <formula>if( Start_Date__c &gt;  DATEVALUE(Opportunity.OMC_Approved_Date__c) ,Start_Date__c,DATEVALUE(Opportunity.OMC_Approved_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Start Date</label>
    <type>Date</type>
</CustomField>