unpackaged/main/default/objects/OpportunityLineItem/fields/Add_on__c.field-meta.xml
<CustomField>
    <fullName>Add_on__c</fullName>
    <label>Add on</label>
    <length>255</length>
    <type>Text</type>
</CustomField>