unpackaged/main/default/objects/OpportunityLineItem/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount after discount before tax (Sales Price * Qty - Discount), exclude complimentary</description>
    <formula>IF( Complimentary__c = TRUE, IF(Record_Type__c=&quot;B2C&quot;, (UnitPrice *  Quantity) - TotalPrice, (UnitPrice *  Quantity) - Discounted_Amount__c -  TotalPrice) , IF(Record_Type__c=&quot;B2C&quot;, (UnitPrice *  Quantity) - Discounted_Amount__c - Pro_Rate_Amount__c, (UnitPrice *  Quantity) - Discounted_Amount__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Sales Price * Qty - Discount) - Complimentary, before Tax</inlineHelpText>
    <label>Price after discount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>