unpackaged/main/default/objects/OpportunityLineItem/fields/Child_Category__c.field-meta.xml
<CustomField>
    <fullName>Child_Category__c</fullName>
    <label>Child Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>