unpackaged/main/default/objects/OpportunityLineItem/fields/Commercial_Product__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Product__c</fullName>
    <label>Commercial Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>