unpackaged/main/default/objects/OpportunityLineItem/fields/Complimentary__c.field-meta.xml
<CustomField>
    <fullName>Complimentary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate this product is given to customer as Complimentary</description>
    <inlineHelpText>Check if this product is Complimentary</inlineHelpText>
    <label>Complimentary</label>
    <type>Checkbox</type>
</CustomField>