unpackaged/main/default/objects/OpportunityLineItem/fields/Contract_Term__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term__c</fullName>
    <label>Contract Term</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>