unpackaged/main/default/objects/OpportunityLineItem/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Discount %, not using standard SF field</description>
    <inlineHelpText>Apply this Discount % (DO NOT input Discount Amount if this is applicable)</inlineHelpText>
    <label>Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>