unpackaged/main/default/objects/OpportunityLineItem/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is the discount amount that the sales user will input</description>
    <inlineHelpText>Apply this Discount Amount (DO NOT input Discount % if this is applicable)</inlineHelpText>
    <label>Discount Amt</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>