unpackaged/main/default/objects/OpportunityLineItem/fields/Discount_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discount_Reason__c</fullName>
    <label>Discount Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Discount_Reasons</valueSetName>
    </valueSet>
</CustomField>