unpackaged/main/default/objects/OpportunityLineItem/fields/Discount_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Discount_Remarks__c</fullName>
    <label>Discount Remarks</label>
    <length>60</length>
    <type>Text</type>
</CustomField>