unpackaged/main/default/objects/OpportunityLineItem/fields/Discounted_10dp__c.field-meta.xml
<CustomField>
    <fullName>Discounted_10dp__c</fullName>
    <description>NS need this field in such format to avoid rounding difference in invoicing. Discount % in decimal format, not percent</description>
    <formula>If ( 
Discount_Amount__c &lt;&gt; 0, Discount_Amount__c/(UnitPrice * Quantity), 
Discount__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted % 10dp</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>