unpackaged/main/default/objects/OpportunityLineItem/fields/Discounted__c.field-meta.xml
<CustomField>
    <fullName>Discounted__c</fullName>
    <formula>If (  
Discount_Amount__c &lt;&gt; 0, Discount_Amount__c/(UnitPrice * Quantity),
Discount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated by applying the Discount % or Discount Amount for this product</inlineHelpText>
    <label>Discounted %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>