unpackaged/main/default/objects/OpportunityLineItem/fields/Discounted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Amount__c</fullName>
    <formula>If (
Discount__c &lt;&gt; 0, ((UnitPrice * Quantity) * Discount__c)+Discount_Amount__c, 
Discount_Amount__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated by applying the Discount % or Discount Amount for this product</inlineHelpText>
    <label>Discounted Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>