unpackaged/main/default/objects/OpportunityLineItem/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>End Date of the contract for the line item. Map to NetSuite SO.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>