unpackaged/main/default/objects/OpportunityLineItem/fields/From_Contract_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>From_Contract_Item_Id__c</fullName>
    <label>From Contract Item Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>