unpackaged/main/default/objects/OpportunityLineItem/fields/GST_VAT_Code_NS_InternalID__c.field-meta.xml
<CustomField>
    <fullName>GST_VAT_Code_NS_InternalID__c</fullName>
    <description>This is created to be used for Celigo mapping.</description>
    <formula>GST_VAT_Code__r.NS_Tax_Internal_ID__c</formula>
    <label>GST/VAT Code NS InternalID</label>
    <type>Text</type>
</CustomField>