unpackaged/main/default/objects/OpportunityLineItem/fields/GST_VAT_Rate__c.field-meta.xml
<CustomField>
    <fullName>GST_VAT_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Tax Rate</inlineHelpText>
    <label>GST/VAT Rate %</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>