unpackaged/main/default/objects/OpportunityLineItem/fields/Is_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Is_Bundle__c</fullName>
    <formula>PricebookEntry.Product2.Is_Bundle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Bundle?</label>
    <type>Checkbox</type>
</CustomField>