unpackaged/main/default/objects/OpportunityLineItem/fields/Item_Category__c.field-meta.xml
<CustomField>
    <fullName>Item_Category__c</fullName>
    <label>Item Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>