unpackaged/main/default/objects/OpportunityLineItem/fields/Line_Description2__c.field-meta.xml
<CustomField>
    <fullName>Line_Description2__c</fullName>
    <description>Copy from Product Master when created, allow users to edit.
The original line description from Oppty is not used, because is not Long Text Area</description>
    <label>Line Description</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>