unpackaged/main/default/objects/OpportunityLineItem/fields/List_Rate__c.field-meta.xml
<CustomField>
    <fullName>List_Rate__c</fullName>
    <label>List Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>