unpackaged/main/default/objects/OpportunityLineItem/fields/NetSuite_Item_Key_Id__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_Item_Key_Id__c</fullName>
    <externalId>true</externalId>
    <label>NetSuite Item Key Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>