unpackaged/main/default/objects/OpportunityLineItem/fields/Opportunity_Product_Weighted_value__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Weighted_value__c</fullName>
    <formula>Amount__c   *  Opportunity.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Product (Weighted) value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>