unpackaged/main/default/objects/OpportunityLineItem/fields/Oppty_Country__c.field-meta.xml
<CustomField>
    <fullName>Oppty_Country__c</fullName>
    <description>Capture Oppty Country and use to field to lookup Tax Code when user change the Tax Code</description>
    <formula>Opportunity.Country__c</formula>
    <label>Oppty Country</label>
    <type>Text</type>
</CustomField>