unpackaged/main/default/objects/OpportunityLineItem/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>Upgrade Inside Renewal Window</fullName>
            </value>
            <value>
                <fullName>Upgrade Outside Renewal Window</fullName>
            </value>
            <value>
                <fullName>Downgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>