unpackaged/main/default/objects/OpportunityLineItem/fields/Original_Price__c.field-meta.xml
<CustomField>
    <fullName>Original_Price__c</fullName>
    <label>Original Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>