unpackaged/main/default/objects/OpportunityLineItem/fields/Originating_Offer__c.field-meta.xml
<CustomField>
    <fullName>Originating_Offer__c</fullName>
    <label>Originating Offer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>