unpackaged/main/default/objects/OpportunityLineItem/fields/Originating_Offer_Name__c.field-meta.xml
<CustomField>
    <fullName>Originating_Offer_Name__c</fullName>
    <label>Originating Offer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>