unpackaged/main/default/objects/OpportunityLineItem/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <description>This field is to contain relationship to OpportunityLineItem (Parent) because current SF design not allowing to have lookup field to OpportunityLineItem.</description>
    <label>Parent</label>
    <length>20</length>
    <type>Text</type>
</CustomField>