unpackaged/main/default/objects/OpportunityLineItem/fields/PO__c.field-meta.xml
<CustomField>
    <fullName>PO__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Send to PO API when it&#39;s checked</description>
    <inlineHelpText>Send to PO API when it&#39;s checked</inlineHelpText>
    <label>Auto-Activation</label>
    <type>Checkbox</type>
</CustomField>