unpackaged/main/default/objects/OpportunityLineItem/fields/Price_before_discount__c.field-meta.xml
<CustomField>
    <fullName>Price_before_discount__c</fullName>
    <description>This file show Qty * Unit Price - Complimentary</description>
    <formula>IF( Complimentary__c = TRUE , IF( Record_Type__c  &lt;&gt; &#39;B2C&#39;, (UnitPrice * Quantity) - TotalPrice, IF(  FLOOR( SNo__c ) =SNo__c   , (UnitPrice * Quantity) , 0) ) , (UnitPrice * Quantity))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Sale Price * Qty) - Complimentary, before Discount &amp; Tax</inlineHelpText>
    <label>Price before discount</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>