unpackaged/main/default/objects/OpportunityLineItem/fields/Pro_Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pro_Rate_Amount__c</fullName>
    <label>Pro Rate Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>