unpackaged/main/default/objects/OpportunityLineItem/fields/Product_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Product_Configuration__c</fullName>
    <label>Product Configuration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>