unpackaged/main/default/objects/OpportunityLineItem/fields/Product_Duration__c.field-meta.xml
<CustomField>
    <fullName>Product_Duration__c</fullName>
    <formula>TEXT(End_Date__c - Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Duration Days</label>
    <type>Text</type>
</CustomField>