unpackaged/main/default/objects/OpportunityLineItem/fields/Product_Subclass__c.field-meta.xml
<CustomField>
    <fullName>Product_Subclass__c</fullName>
    <label>Product Subclass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>