unpackaged/main/default/objects/OpportunityLineItem/fields/Promo_Mechanic_Id__c.field-meta.xml
<CustomField>
    <fullName>Promo_Mechanic_Id__c</fullName>
    <label>Promo Mechanic Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>