unpackaged/main/default/objects/OpportunityLineItem/fields/Push_to_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>Push_to_NetSuite__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Push to NetSuite</label>
    <type>Checkbox</type>
</CustomField>