unpackaged/main/default/objects/OpportunityLineItem/fields/Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card__c</fullName>
    <label>Rate Card</label>
    <length>255</length>
    <type>Text</type>
</CustomField>