unpackaged/main/default/objects/OpportunityLineItem/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>