unpackaged/main/default/objects/OpportunityLineItem/fields/Rev_Terms_in_months__c.field-meta.xml
<CustomField>
    <fullName>Rev_Terms_in_months__c</fullName>
    <description>Revenue Terms in months</description>
    <inlineHelpText>0,6,12mths term</inlineHelpText>
    <label>Rev. Terms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>