unpackaged/main/default/objects/OpportunityLineItem/fields/SNo__c.field-meta.xml
<CustomField>
    <fullName>SNo__c</fullName>
    <description>System generated this number for use of grouping parent and child. Also use when print contract, the order of the products will in ascending order. When users delete the products, the number isn&#39;t reused.</description>
    <label>SNo</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>