unpackaged/main/default/objects/OpportunityLineItem/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Start Date of the contract for the line item. Map to NetSuite SO.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>