unpackaged/main/default/objects/OpportunityLineItem/fields/Start_Date_Clone__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Clone__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>