unpackaged/main/default/objects/OpportunityLineItem/fields/Term_Contract_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Term_Contract_Pricing_Type__c</fullName>
    <label>Term / Contract Pricing Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>