unpackaged/main/default/objects/OpportunityLineItem/fields/WHT_Amount__c.field-meta.xml
<CustomField>
    <fullName>WHT_Amount__c</fullName>
    <formula>Amount__c  * WHT_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WHT Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>