unpackaged/main/default/objects/OpportunityLineItem/fields/WHT_Rate__c.field-meta.xml
<CustomField>
    <fullName>WHT_Rate__c</fullName>
    <label>WHT Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>