unpackaged/main/default/objects/OpportunityLineItem/validationRules/Check_Complimentary_for_100_discount.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Complimentary_for_100_discount</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 Opportunity.RecordType.Name = &quot;B2B&quot;,
AND(Complimentary__c  = FALSE,Discount__c = 1)
)</errorConditionFormula>
    <errorDisplayField>Complimentary__c</errorDisplayField>
    <errorMessage>Please mark this Complimentary as the discount is 100%</errorMessage>
</ValidationRule>