unpackaged/main/default/objects/OpportunityLineItem/validationRules/End_Date_must_be_later_than_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_must_be_later_than_Start_Date</fullName>
    <active>true</active>
    <description>End Date must be later than Start Date. During product creation (using Oppty Clone with Products), doesn&#39;t need to check this rule.  Updated to remove the ISNEW condition.  Fires for new and edit.</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(Opportunity.Approval_Status__c,&quot;OMC Approval Rejected&quot;)),
End_Date__c &lt; Start_Date__c
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date must be later than Start Date</errorMessage>
</ValidationRule>